--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     <p>
       Email: alisonz0816@gmail.com
       <!-- TODO: change this -->
-      <a href="mailto:your-email@example.com">your-email@example.com</a>
+    <p>Email: <a href="mailto:alisonz0816@gmail.com">alisonz0816@gmail.com</a></p>
+
     </p>
   </section>
 </main>
